Document the rest of the API
